bitfields/tests/compile_error_cases/errors/bitfield_field_type_too_small_for_bits.stderr
error: The field type 'u8' is too small to hold the specified '10 bits'.
 --> tests/compile_error_cases/errors/bitfield_field_type_too_small_for_bits.rs:7:12
  |
7 |     #[bits(10)]
  |            ^^
